samples/_failures_safe/1761655525_6db6f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0de80d97.c: In function ‘main’:
./samples/SAFE/__tmp_0de80d97.c:128:9: error: expected identifier at end of input
  128 |         printf("%s [%s] %s\n", logs[i].timestamp, logs[i].
      |         ^~~~~~
./samples/SAFE/__tmp_0de80d97.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0de80d97.c:128:9: error: expected declaration or statement at end of input
